this is definitely the one

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,28 +15,28 @@
     <span>
     <form action="" id="onlyForm" >
         
-            <div>
+            <div style="margin: 3px;">
             <label for="first_name">First Name *</label><br>
             <input type="text" id="first_name" name="first_name" placeholder="First Name" required>
             </div>
-            <div>
+            <div style="margin: 3px;">
                 <label for="last_name">Last Name *</label><br>
                 <input type="text" id="last_name" name="last_name" placeholder="Last Name" required>
             </div>
-            <div>
+            <div style="margin: 3px;">
                 <label for="email">Email *</label><br>
                 <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
-            <div>
+            <div style="margin: 3px;">
                 <label for="phone_number">Phone Number</label><br>
                 <input type="tel" id="phone_number" name="phone_number" placeholder="Phone Number" minlength="10">
             </div>
-            <div>
+            <div style="margin: 3px;">
                 <label for="subject">Subject *</label><br>
                 <input type="text" id="subject" name="subject" placeholder="Subject" required><br>
             </div>
-            <div>
-                <textarea rows = "5" cols = "50" name = "description">
+            <div style="margin: 3px;">
+                <textarea rows = "5" cols = "50" name = "description" style="margin: 10px;">
 I just wanted to say...
                  </textarea>
             </div>
