--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     </header>
     <center>
         <div style="border: 5px solid black; padding: 16px;">
-    <h1>Home Page</h1>
+    <h1 style="padding: 10px;">Home Page</h1>
     <p>The Page that's Home</p>
     <img src="/Users/idan/Desktop/WEB/Idan_maierovicz/static/secondHouse.png" alt="House" style="padding: 20px;">
 </center>
