--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,8 +8,8 @@
 </head>
 <body background="../static/how-to-write-a-letter.jpeg">
     <header>
-        <a href="./home.html">Home</a>
-        <a href="./contact.html">Contact</a>
+        <a style="color: palevioletred;" href="./home.html">Home</a>
+        <a style="color: palevioletred;" href="./contact.html">Contact</a>
     </header>
     <center><h1 style="font-size: 50px; color: black;">Contact Form</h1>
     <span>
