--- a/templates/home.html
+++ b/templates/home.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
-<body>
-    <header>
-        <a href="./home.html">Home</a>
-        <a href="./contact.html">Contact</a>
+<body style="background-color: rgb(188, 226, 126);">
+   
+        <a style="color: palevioletred;" href="./home.html ">Home</a>
+        <a style="color: palevioletred;" href="./contact.html">Contact</a>
+        <div style="background-color: rgb(207, 243, 148);"> <header></header>
     </header>
     <center>
-        <div style="border: 5px solid black; padding: 16px;">
-    <h1 style="padding: 10px;">Home Page</h1>
-    <p>The Page that's Home</p>
-    <img src="/Users/idan/Desktop/WEB/Idan_maierovicz/static/secondHouse.png" alt="House" style="padding: 20px;">
+        <div style="border: 5px solid white; padding: 16px;">
+    <h1 style="padding: 10px; color: palevioletred;">Home Page</h1>
+    <p style="color: palevioletred; font-size: larger;">The Page that's Home</p>
+    
+        <img style="border: 5px solid whitesmoke"; src="/Users/idan/Desktop/WEB/Idan_maierovicz/static/secondHouse.png" alt="House" style="padding: 20px;">
+
+    
 </center>
+</div>
 </div>
 </body>
 </html>
