this isn't the worst one

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,12 +14,12 @@
     </header>
     <center>
         <div style="border: 5px solid white; padding: 16px;">
-    <h1 style="padding: 10px; color: palevioletred;">Home Page</h1>
-    <p style="color: palevioletred; font-size: larger;">The Page that's Home</p>
+    <h1 style="font-size: 50px; padding: 10px; color: palevioletred;">Home Page</h1>
+    <p style="color: palevioletred; font-size: 25px;">The Page that's Home</p>
     
         <img style="border: 5px solid whitesmoke"; src="/Users/idan/Desktop/WEB/Idan_maierovicz/static/secondHouse.png" alt="House" style="padding: 20px;">
-
-    
+<p style="color: palevioletred; font-size: larger;">If you love home pages as much as we do, you have come to the right place!</p>
+<a style="color: palevioletred; font-size: larger;" href="./contact.html">Tell us how much you love home pages</p>   
 </center>
 </div>
 </div>
