--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,7 +37,7 @@
             </div>
             <div style="margin: 3px;">
                 <textarea rows = "5" cols = "50" name = "description" style="margin: 10px;">
-I just wanted to say...
+I just wanted to say somthing about home pages...
                  </textarea>
             </div>
             <input type="submit" value="Submit">
